# mathpy-cli

./: .gitignore  LICENSE  Makefile  README.md  main.py  pyproject.toml  pyrightconfig.json  requirements.txt  test_exhaustive.py  test_game.py
docs/: README.md  algorithm.md  api.md  architecture.md  changelog.md  contributing.md  examples.md  faq.md  index.md  project-structure.md  readme.md
